--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -52,14 +52,14 @@ line-height: 1.7em;
 float: left;
 margin-right: 10px;
 font-size: 1.7em;
-color: blue;
+color: black;
 text-transform: uppercase;
 letter-spacing: -1px;
 padding-top: 9px;
 font-weight: bold;
 line-height: 1;
 &:hover {
-color: black;
+color: green;
 text-decoration: none;
 }
 }
