--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="footer">
 <small>
-<a href="http://railstutorial.org/">Created by</a>
+<a href="http://railstutorial.org/">Crafted by</a>
 Nitanshu Verma
 </small>
 <nav>
