--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -6,3 +6,4 @@ Get help on the Ruby on Rails Tutorial at the
 To get help on this Tweet Book, see the
 <a href="http://railstutorial.org/book">Rails Tutorial book</a>.
 </p>
+To know more about her click on the pic <div align="right"><%= link_to image_tag("1.jpg", alt: "sorry"), 'http://www.google.com/' %></div>
