--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,7 +1,9 @@
 @import "bootstrap";
 
 /* mixins, variables, etc. */
+
 $grayMediumLight: #eaeaea;
+
 @mixin box_sizing {
 -moz-box-sizing: border-box;
 -webkit-box-sizing: border-box;
@@ -93,6 +95,7 @@ margin-left: 10px;
 }
 
 /* miscellaneous */
+
 .debug_dump {
 clear: both;
 float: left;
@@ -162,5 +165,33 @@ border-top: 1px solid $grayLighter;
 &:last-child {
 border-bottom: 1px solid $grayLighter;
 }
+}
+}
+
+/* microposts */
+
+.microposts {
+list-style: none;
+margin: 10px 0 0 0;
+
+li {
+padding: 10px 0;
+border-top: 1px solid #e8e8e8;
+}
+}
+.content {
+display: block;
+}
+.timestamp {
+color: $grayLight;
+}
+.gravatar {
+float: left;
+margin-right: 10px;
+}
+aside {
+textarea {
+height: 100px;
+margin-bottom: 5px;
 }
 }
