--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,26 @@
+<% if signed_in? %>
+
+<div class="row">
+
+<aside class="span4">
+
+<section>
+<%= render 'shared/user_info' %>
+</section>
+
+<section>
+<%= render 'shared/micropost_form' %>
+</section>
+
+<div class="span8">
+
+<h3>Micropost Feed</h3>
+<%= render 'shared/feed' %>
+</div>
+</aside>
+</div>
+<% else %>
+
 <div class="center hero-unit">
 <h1>Welcome to the tweetIn</h1>
 <h2>
@@ -8,3 +31,4 @@ Testing site.
 <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
 </div>
 <%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
+<%end%>
