add user following

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,3 +1,4 @@
+
 @import "bootstrap";
 
 /* mixins, variables, etc. */
@@ -96,15 +97,10 @@ margin-left: 10px;
 
 /* miscellaneous */
 
-.debug_dump {
-clear: both;
-float: left;
-width: 100%;
-margin-top: 45px;
-@include box_sizing;
-}
-
 /* sidebar */
+
+
+
 aside {
 section {
 padding: 10px 0;
@@ -129,6 +125,34 @@ margin-bottom: 3px;
 .gravatar {
 float: left;
 margin-right: 10px;
+}
+
+.stats {
+overflow: auto;
+a {
+float: left;
+padding: 0 10px;
+border-left: 1px solid $grayLighter;
+color: gray;
+&:first-child {
+padding-left: 0;
+border: 0;
+}
+&:hover {
+text-decoration: none;
+color: $blue;
+}
+}
+strong {
+display: block;
+}
+}
+.user_avatars {
+overflow: auto;
+margin-top: 10px;
+.gravatar {
+margin: 1px 1px;
+}
 }
 
 /* forms */
