--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -9,26 +9,27 @@
 </section>
 
 <section>
-<%= render 'shared/micropost_form' %>
+<%= render 'shared/stats' %>
 </section>
 
+<section>
+<%= render 'shared/micropost_form' %>
+</section>
+</aside>
 <div class="span8">
 
 <h3>Micropost Feed</h3>
 <%= render 'shared/feed' %>
 </div>
-</aside>
+
 </div>
 <% else %>
 
 <div class="center hero-unit">
 <h1>Welcome to the tweetIn</h1>
 <h2>
-This is the home page for the
-<a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-Testing site.
+Connect to the World!!!
 </h2>
 <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
 </div>
-<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
 <%end%>
