--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="footer">
-<small>
-<a href="http://railstutorial.org/">Crafted by</a>
-Nitanshu Verma
+<small>developed & crafted by
+<a href="localhost:3000/users">Nitanshu Verma</a>
+
 </small>
 <nav>
 <ul>
