--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -27,9 +27,9 @@
 
 <div class="center hero-unit">
 <h1>Welcome to the tweetIn</h1>
-<h2>
-Connect to the World!!!
-</h2>
+<h2>Connect to the World!!!</h2>
+
+
 <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
 </div>
 <%end%>
