--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,8 +1,9 @@
-<% provide(:title, 'About Us') %>
+<% provide(:title, 'About') %>
 <h1>About Us</h1>
+
+
 <p>
-The <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-is a project to make a book and screencasts to teach web development
-with <a href="http://rubyonrails.org/">Ruby on Rails</a>. This
-is the sample application for the tutorial.
+This site is basically a demo site of twitter which has been developed by <b>Nitanshu verma</b> during the learning of rails Technology and few more functionalities about to be implemented. This site is totally secured and all the vulnerablities of this site have been filled up and I have tried my level best to make it as secure as a site needs to be. 
 </p>
+
+<div align="right"><%= link_to image_tag("photo0259.jpg", alt: "sorry"), 'http://www.google.com/' %></div>
