--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'Contact') %>
 <h1>Contact</h1>
 <p>
-Contact Ruby on Rails Tutorial about the sample app at the
-<a href="http://railstutorial.org/contact">contact page</a>.
+You can contact me by sending your queries regarding the website on My Email_Id:<b>nitanhsu1991@gmail.com<b> 
+
 </p>
