--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,9 +1,6 @@
 <% provide(:title, 'Help') %>
 <h1>Help</h1>
 <p>
-Get help on the Ruby on Rails Tutorial at the
-<a href="http://railstutorial.org/help">Rails Tutorial help page</a>.
-To get help on this Tweet Book, see the
-<a href="http://railstutorial.org/book">Rails Tutorial book</a>.
+If you have any kind of problem or any queries regarding the website you can send me a mail on my Email_Id:<b>nitanhsu1991@gmail.com</b> 
 </p>
 To know more about her click on the pic <div align="right"><%= link_to image_tag("1.jpg", alt: "sorry"), 'http://www.google.com/' %></div>
