--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,13 +1,12 @@
+
 <footer class="footer">
 <small>developed & crafted by
-<a href="localhost:3000/users">Nitanshu Verma</a>
+<b>Nitanshu Verma</b>
 
 </small>
 <nav>
 <ul>
 <li><%= link_to "About", about_path %></li>
-<li><%= link_to "Contact", contact_path %></li>
-<li><a href="http://news.railstutorial.org/">News</a></li>
 </ul>
 </nav>
 </footer>
