--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -3,7 +3,10 @@
 
 
 <p>
-This site is basically a demo site of twitter which has been developed by <b>Nitanshu verma</b> during the learning of rails Technology and few more functionalities about to be implemented. This site is totally secured and all the vulnerablities of this site have been filled up and I have tried my level best to make it as secure as a site needs to be. 
+This site is basically a demo site of twitter which has been developed by <b>Nitanshu verma</b> during the learning of rails Technology and few more functionalities about to be implemented. This site is totally secured and all the vulnerabilities of this site have been filled up and I have tried my level best to make it as secure as a site needs to be. <b>Thank You</b>  
 </p>
+
+
+
 
 <div align="right"><%= link_to image_tag("photo0259.jpg", alt: "sorry"), 'http://www.google.com/' %></div>
