--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'Help') %>
 <h1>Help</h1>
 <p>
-If you have any kind of problem or any queries regarding the website you can send me a mail on my Email_Id:<b>nitanhsu1991@gmail.com</b> 
+Hi this is nitanshu verma
+If you have any kind of problem or any queries regarding this website you can send me a mail on my Email_Id:<b>nitanhsu1991@gmail.com</b> and i will reply to your queries. Thank you
 </p>
-To know more about her click on the pic <div align="right"><%= link_to image_tag("1.jpg", alt: "sorry"), 'http://www.google.com/' %></div>
